--- a/LP-S/register.css
+++ b/LP-S/register.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-    background-image: rgba(238, 230, 230, 0.1);
+    background-color: rgb(255, 231, 230, 0.2);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -62,30 +62,131 @@ input{
 #registerTerms{
     width: 4%;
 }
-button{
+.button{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
     text-decoration: none;
-    border-radius: 45%;
+    border-radius: 4%;
     transition: background-color 0.2s, border 0.2s, color 0.7s; 
+    background-color: #fe908b;
     border: 2px solid #fd6f68;
-    background-color: transparent;
-    color: #fd6f68;
+    color: #fff;
     margin-left: 18vh;
     margin-top: 4vh;
 }
 
-button:link, 
-button:visited{
+.button:link, 
+.button:visited{
     border: 2px solid #fd6f68;
     color: #fd6f68;
 }
 
-button:hover,
-button:active {
+.button:hover,
+.button:active {
     background-color: #fe908b;
     border: 2px solid #fd6f68;
     color: #fff;
 }
+@media only screen and (max-width:1024px){
+    .header-wrap{
+        height: 9%;
+    }
+    .logo{
+        height: 125px;
+    }
+    #register-wrap{
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 20px;
+    }
+    #registerT{
+        margin-right: 5%;
+    }
+    .button:link{
+        background-color: #fe908b;
+        color: #fff;
+    }
+    input{
+        height: 3vh;
+    }
+    #registerGender{
+        height: 3vh;
+    }
+    #formTerms{
+        width: 2%;
+    }
+}
 
+@media only screen and (max-width:768px){
+    .header-wrap{
+        height: 9%;
+    }
+    .logo{
+        height: 92px;
+    }
+}
+@media only screen and (max-width:415px){
+    .header-wrap{
+        height: 50px;
+    }
+    .logo{
+        height: 51px;
+    }
+    #register-wrap{
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 12px;
+    }
+    .button{
+        padding: 3px 7px;
+        border: 1.5px solid #fd6f68;
+    } 
+    .input{
+        height: 3vh;
+    }  
+}
+@media only screen and (max-width:376px){
+    .logo{
+        height: 50px;
+    }
+    .header-wrap{
+        height: 50px;
+    }
+    #register-wrap{
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 10px;
+    }
+    .button{
+        padding: 3px 6px;
+    }
+    .input{
+        height: 3vh;
+    }
+    #registerGender{
+        height: 3vh;
+    }
+}
+
+@media only screen and (max-width:360px){
+    .header-wrap{
+        height: 7%;
+    }
+    .logo{
+        height: 45px;
+    }
+}
+@media only screen and (max-width:320px){
+    .logo{
+        height: 40px;
+    }
+    #register-wrap{
+        padding-left: 0;
+        padding-right: 0;
+        font-size: 10px;
+    }
+    .button{
+        border: 1.5px solid #fd6f68;
+    }   
+}
