--- a/myads.css
+++ b/myads.css
@@ -29,10 +29,10 @@ html,body {
   margin: 0 auto;
 }
 .logo {
-  height: 100px;
+  height: 3em;
   width: auto;
   float: left;
-  margin: -5px 0px 0px 5px;
+  margin: -5px 0px 0px 3em;
 }
 
 #manyads{
@@ -65,7 +65,7 @@ html,body {
   }
 }
 
-@media screen and (min-width: 300px) and (max-width: 800px) {
+@media screen and (min-width: 300px) and (max-width: 700px) {
   #manyads .ad {
     width: 49%;
     margin-right: 2%;
@@ -76,11 +76,11 @@ html,body {
   .ad .list-image img{
     width:30px;
     display:inline-block;
-
   }
   img.logo{
-    height: 75px;
-    margin:0px 0px 0px 20px;
+    height: 1.2em;
+    width: auto;
+    margin: 0px 0px 0px 0em;
   }
   .ad .text{
     flex:1 2 auto;
@@ -258,6 +258,16 @@ html,body {
       padding: 2px 2px;
       margin: 0px 0px;
     }
+    .ad:hover{
+      background-color:#e7d6d6;
+      box-shadow: 2px 5px 5px #aa9f9f;
+    }
+    .  {
+      height: 4ems;
+      width: auto;
+      float: left;
+      margin: -5em 0em 0em 5em;
+    }
   }
 
   /* @media screen and (max-width: 600px) {
@@ -295,12 +305,13 @@ html,body {
 
   .notification .badge {
     position:absolute;
-    top: 20px;
-    right: -10px;
+    top: 1.4em;
+    right: -0.7em;
     padding: 3px 8px;
     border-radius: 50%;
     background: pink;
     color: white;
+    font-size:12px;
   }
   .notification span:first-child:before{
     content:url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
@@ -308,10 +319,10 @@ html,body {
   form input{
     float:right;
     margin:12px;
-    border:none;
+    border:0.5px solid;
     box-shadow:0px 0px 0px;
     padding:2px;
     text-align:center;
-    background-image:linear-gradient(to left,#5b81a4,white,#5b81a4);
     color:black;
+    width:10%;
   }
