--- a/statics.css
+++ b/statics.css
@@ -15,12 +15,11 @@ html,body {
   text-rendering: optimizeLegibility;
   overflow-x: hidden;
 }
-
- .logo {
-  height: 75px;
+.logo {
+  height: 3em;
   width: auto;
   float: left;
-  margin: -5px 0px 0px 50px;
+  margin: -5px 0px 0px 3em;
 }
 
  #statitics{
@@ -51,15 +50,16 @@ html,body {
 
 }
 
-@media screen and (min-width: 300px) and (max-width: 800px) {
+@media screen and (min-width: 300px) and (max-width: 700px) {
   #statitics .stat {
     width: 49%;
     margin-right: 2%;
   }
 
   img.logo{
-    height: 75px;
-    margin:0px 0px 0px 20px;
+    height: 1.2em;
+    width: auto;
+    margin: 0px 0px 0px 0.5em;
   }
   .stat .text{
     flex:1 2 auto;
@@ -124,143 +124,207 @@ html,body {
     content:url("https://img.icons8.com/small/15/000000/downloads.png");
   }
 
-
-
-.topnav {
-  overflow: hidden;
-  background-color: #5b81a4;
-}
-
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.active {
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-.dropdown {
-  float: right;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 17px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
-
-.topnav a:hover, .dropdown:hover .dropbtn {
-  background-color: #6a97c1ad;
-  color: white;
-}
-
-.dropdown-content a:hover {
-  background-color: #6a97c1ad;
-  color: black;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-@media screen and (max-width: 600px) {
-  form[action] {
-    display: none;
+  .topnav {
+   overflow: hidden;
+    background-color: #5b81a4;
+    width: 100%;
   }
-  .topnav a,.dropdown .dropbtn{
+
+  .topnav a {
     float: right;
     display: block;
-    padding: 2px 2px;
-    margin: 0px 0px;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
   }
-}
 
-/* @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
+  .active {
+    color: white;
+  }
+
+  .topnav .icon {
+    display: none;
+  }
+
+  .dropdown {
+    float: right;
+    overflow: hidden;
+  }
+
+  .dropdown .dropbtn {
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+
+  .dropdown-content {
+    display: none;
     position: absolute;
-    right: 0;
-    top: 0;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
   }
-  .topnav.responsive a {
+
+  .dropdown-content a {
     float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
     display: block;
     text-align: left;
   }
-  .topnav.responsive .dropdown {float: none;}
-  .topnav.responsive .dropdown-content {position: relative;}
-  .topnav.responsive .dropdown .dropbtn {
+
+  .topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: #6a97c1ad;
+    color: white;
+  }
+
+  .dropdown-content a:hover {
+    background-color: #6a97c1ad;
+    color: black;
+  }
+
+  .dropdown:hover .dropdown-content {
     display: block;
-    width: 100%;
-    text-align: left;
-  }} */
-.notification {
-  background-color: ;
-  color: white;
-  text-decoration: none;
-  padding: 15px 26px;
-  position: relative;
-  display: inline-block;
-  border-radius: 2px;
-}
+  }
 
-.notification:hover {
-  background: red;
-}
+  @media screen and (min-width: 300px) and (max-width: 700px) {
+    form[action] {
+      display: none;
+    }
+    .topnav a,.dropdown .dropbtn{
+      float: right;
+      display: block;
+      padding: 2px 2px;
+      margin: 0px 0px;
+    }
+    .ad:hover{
+      background-color:#e7d6d6;
+      box-shadow: 2px 5px 5px #aa9f9f;
+    }
+    /* img.logo{
+      height: 2em;
+      width:auto;
+      margin:0px 0px 0px 1em;
+    } */
+    .topnav a,.dropdown .dropbtn{
+      float: right;
+      display: block;
+      padding: 2px 2px;
+      margin: 0px 0px;
+    }
+    /* .logo {
+      height: 4ems;
+      width: auto;
+      float: left;
+      margin: -5em 0em 0em 5em;
+    } */
+  }
 
-.notification .badge {
-  position:absolute;
-  top: 20px;
-  right: -10px;
-  padding: 3px 8px;
-  border-radius: 50%;
-  background: pink;
-  color: white;
-}
-.notification span:first-child:before{
-  content:url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
-}
-form input{
-  float:right;
-  margin:12px;
-  border:none;
-  box-shadow:0px 0px 0px;
-  padding:2px;
-  text-align:center;
-  background-image:linear-gradient(to left,#5b81a4,white,#5b81a4);
-  color:black;
-}
+  /* @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    .topnav.responsive .dropdown {float: none;}
+    .topnav.responsive .dropdown-content {position: relative;}
+    .topnav.responsive .dropdown .dropbtn {
+      display: block;
+      width: 100%;
+      text-align: left;
+    }} */
+  .notification {
+    background-color: ;
+    color: white;
+    text-decoration: none;
+    padding: 15px 26px;
+    position: relative;
+    display: inline-block;
+    border-radius: 2px;
+  }
+
+  .notification:hover {
+    background: red;
+  }
+
+  .notification .badge {
+    position:absolute;
+    top: 1.4em;
+    right: -0.7em;
+    padding: 3px 8px;
+    border-radius: 50%;
+    background: pink;
+    color: white;
+    font-size:12px;
+  }
+  .notification span:first-child:before{
+    content:url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
+  }
+  form input{
+    float:right;
+    margin:12px;
+    border:0.5px solid;
+    box-shadow:0px 0px 0px;
+    padding:2px;
+    text-align:center;
+    color:black;
+    width:10%;
+  }
+
+  .header-wrap{
+    background-color:#5b81a4;
+    height: 10.6vh;
+    position:sticky;
+    top:0;
+    z-index: 0;
+  }
+  .content-wrap {
+    background-color:#5b81a4;
+    height: 12%;
+    max-width: 1140px;
+    margin: 0 auto;
+  }
+
+  @media screen and (min-width: 300px) and (max-width: 700px) {
+    #manyads .ad {
+      width: 49%;
+      margin-right: 2%;
+    }
+    #manyads .a:nth-of-type(2n) {
+      margin-right: 0;
+    }
+    .ad .list-image img{
+      width:30px;
+      display:inline-block;
+
+    }
+    /* img.logo{
+      height: 1.2em;
+      width: auto;
+      margin: 0px 0px 0px 1em;
+    } */
+    .ad .text{
+      flex:1 2 auto;
+      margin-left:7px;
+      white-space: wrap;
+    }
+    .ad .list-image img{
+      width:50px;
+      display:inline-block;
+    }
+  }
