--- a/LP-S/Login.css
+++ b/LP-S/Login.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-    background-color: rgb(255, 231, 230, 0.2);
+    background-color: rgb(255, 255, 230, 0.2);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -53,7 +53,7 @@ input{
     padding-left: 10%;
 }
 
-button{
+.button{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -122,14 +122,14 @@ button{
   }
 
 
-button:link, 
-button:visited{
+.button:link, 
+.button:visited{
     border: 2px solid #fd6f68;
     color: #fd6f68;
 }
 
-button:hover,
-button:active {
+.button:hover,
+.button:active {
     background-color: #fe908b;
     border: 2px solid #fd6f68;
     color: #fff;
@@ -173,10 +173,20 @@ button:active {
         padding-right: 0;
         font-size: 30px;
     }
-    .btn.btn-ghost:link{
+    .btn:link, .btn:visited{
         background-color: #fe908b;
         color: #fff;
     }
+    .popup h4{
+        padding-top:15%;
+    }
+    .button:link, .button:visited{
+        background-color: #fe908b;
+        color: #fff;
+        padding: 3px 7px;
+        font-size: 15px;
+    }
+
 
 }
 
@@ -204,6 +214,16 @@ button:active {
         padding: 3px 7px;
         border: 1.5px solid #fd6f68;
     }   
+    .popup{
+        width: 70%;
+        font-size: 15px;
+    }
+    .popup h4{
+        font-size: 10px;
+    }
+    .popup .button{
+        font-size: 10px;
+    }
 }
 @media only screen and (max-width:376px){
     .logo{
@@ -220,6 +240,12 @@ button:active {
     .btn.btn-ghost{
         padding: 3px 6px;
     }
+    .popup h4{
+        font-size: 10px;
+    }
+    .button{
+        font-size: 10px;
+    }
 }
 @media only screen and (max-width:360px){
     .header-wrap{
@@ -227,6 +253,12 @@ button:active {
     }
     .logo{
         height: 45px;
+    }
+    .popup h4{
+        font-size: 10px;
+    }
+    .button{
+        font-size: 10px;
     }
 }
 @media only screen and (max-width:320px){
@@ -241,5 +273,11 @@ button:active {
     }
     .btn.btn-ghost{
         border: 1.5px solid #fd6f68;
-    }   
+    }  
+    h4{
+        font-size: 10px;
+    }
+    .button{
+        font-size: 10px;
+    } 
 }
