--- a/LP-S/home2.css
+++ b/LP-S/home2.css
@@ -19,6 +19,10 @@ body {
     text-rendering: optimizeLegibility; 
     overflow-x: hidden;
 }
+body {
+    display: flex;
+    flex-direction: column;
+}
 
 .header-wrap{
     background-color:#5b81a4;
@@ -32,22 +36,18 @@ body {
 }
 
 p {
-    margin-top: 0;
-    margin-right: 300px;
-    margin-bottom: 20px;
-    color: #344a5f;
-    font-size: 100%;
+    text-align: justify;
     word-spacing: 4px;
     letter-spacing: 1px;
-    font-weight: bold;
+    color: #344a5f;
 }
 
 .slider-wrap {
-    position: absolute;
-    width: 1140px;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%); 
+    padding: 0 10%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-grow: 1;
 }
 
 .logo {
@@ -56,14 +56,16 @@ p {
     float: left;
     padding-left: 10%;
 }
-
+.buttons{
+    padding-top:5%;
+}
 .btn:link,
 .btn:visited{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
     text-decoration: none;
-    border-radius: 45%;
+    border-radius: 4%;
     transition: background-color 0.2s, border 0.2s, color 0.7s; 
 }
 
@@ -97,7 +99,7 @@ p {
     color: #fff;
 }
 
-@media only screen and (max-width:1200px){
+/*@media only screen and (max-width:1200px){
     .logo {
         height: 70px;
         margin-top: 0.5px;
@@ -123,8 +125,8 @@ p {
         margin-left:1%;
     }
     
-}
-@media only screen and (max-width:1150px){
+}*/
+/*@media only screen and (max-width:1150px){
     p{
         font-size: 70%;
         margin-right:400px;
@@ -140,13 +142,14 @@ p {
     .btn.btn-ghost{
         margin-left:1%;
     }
-}
+}*/
 @media only screen and (max-width:1024px){
     html,body{
         background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-1.jpg);
     }
-    .header-wrap{
-        height: 9%;
+    .header-wrap {
+        height: 126px;
+        width: auto;
     }
     .logo{
         height: 125px;
@@ -156,27 +159,31 @@ p {
         padding-right: 0;
         font-size: 30px;
     }
-    .btn:link{
+    .btn:link, .btn:visited{
         background-color: #fe908b;
         color: #fff;
     }
-
+    
 }
 
 @media only screen and (max-width:768px){
     html,body{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-2.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-1.jpg);
+    }
+    .body {
+        padding: 0 50px;
     }
     .header-wrap{
-        height: 9%;
+        height: 93px;
     }
     .logo{
         height: 92px;
     }
+    
 }
 @media only screen and (max-width:415px){
     html,body{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-3.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-1.jpg);
     }
     .header-wrap{
         height: 50px;
@@ -189,14 +196,18 @@ p {
         padding-right: 0;
         font-size: 15px;
     }
-    .btn{
+    .btn:link, .btn:visited{
         padding: 3px 7px;
+        font-size:15px;
         border: 1.5px solid #fd6f68;
     }   
+    p{
+        font-size: 15px;
+    }
 }
 @media only screen and (max-width:376px){
     html,body{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-4.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-1.jpg);
     }
     .logo{
         height: 50px;
@@ -209,13 +220,14 @@ p {
         padding-right: 0;
         font-size: 15px;
     }
-    .btn{
-        padding: 3px 6px;
+    p{
+        margin-top: -25%;
+        font-size: 10px;
     }
 }
 @media only screen and (max-width:360px){
     html,body{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-5.jpg);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-1.jpg);
     }
     .header-wrap{
         height: 7%;
@@ -226,7 +238,7 @@ p {
 }
 @media only screen and (max-width:320px){
     html,body{
-        background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),url(slide-img-4-6.jpg);
+        background-image: url(slide-img-4-1.jpg);
     }
     
     .logo{
@@ -236,10 +248,7 @@ p {
         padding-left: 0;
         padding-right: 0;
         font-size: 10px;
-    }
-    .btn{
-        border: 1.5px solid #fd6f68;
-    }   
+    }  
 }
 
 /*@media only screen and (max-width:1024px){
