--- a/LP-S/register.css
+++ b/LP-S/register.css
@@ -7,7 +7,7 @@
 
 html,
 body {
-    background-color: rgb(255, 231, 230, 0.2);
+    background-color: rgb(255, 255, 230, 0.2);
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -62,6 +62,19 @@ input{
 #registerTerms{
     width: 4%;
 }
+.buttonR{
+    display: inline-block;
+    padding: 10px 30px;
+    font-weight: 300;
+    text-decoration: none;
+    border-radius: 4%;
+    transition: background-color 0.2s, border 0.2s, color 0.7s; 
+    border: 2px solid #fd6f68;
+    background-color: transparent;
+    color: #fd6f68;
+    margin-left: 18vh;
+    margin-top: 4vh;
+}
 .button{
     display: inline-block;
     padding: 10px 30px;
@@ -69,11 +82,12 @@ input{
     text-decoration: none;
     border-radius: 4%;
     transition: background-color 0.2s, border 0.2s, color 0.7s; 
-    background-color: #fe908b;
     border: 2px solid #fd6f68;
-    color: #fff;
-    margin-left: 18vh;
+    background-color: transparent;
+    color: #fd6f68;
     margin-top: 4vh;
+    float: right;
+    margin-left: 2vh;
 }
 
 .button:link, 
@@ -88,6 +102,69 @@ input{
     border: 2px solid #fd6f68;
     color: #fff;
 }
+.buttonR:link, 
+.buttonR:visited{
+    border: 2px solid #fd6f68;
+    color: #fd6f68;
+}
+
+.buttonR:hover,
+.buttonR:active {
+    background-color: #fe908b;
+    border: 2px solid #fd6f68;
+    color: #fff;
+}
+.overlay {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background:rgba(0, 0, 0, 0.7);
+    transition: opacity 500ms;
+    visibility: hidden;
+    opacity: 0;
+  }
+  .overlay:target {
+    visibility: visible;
+    opacity: 1;
+  }
+  
+  .popup {
+    margin: 70px auto;
+    padding: 20px;
+    background: #fff;
+    border-radius: 5px;
+    width: 30%;
+    position: relative;
+    transition: all 0.10s ease-in-out;
+  }
+  
+  .popup h4 {
+    margin-top: 0;
+    color: #344a5f;
+    font-family: 'Raleway', sans-serif;
+    font-size: 15px;
+  }
+
+  .popup .contentPU {
+    max-height: 30%;
+    overflow: auto;
+  }
+
+#close {
+    position: absolute;
+    top: 8px;
+    right: 30px;
+    transition: all 200ms;
+    font-size: 30px;
+    font-weight: bold;
+    text-decoration: none;
+    color: #344a5f;
+  }
+ #close:hover {
+    color: #fe908b;
+  }
 @media only screen and (max-width:1024px){
     .header-wrap{
         height: 9%;
@@ -103,7 +180,7 @@ input{
     #registerT{
         margin-right: 5%;
     }
-    .button:link{
+    .buttonR:link, .buttonR:visited{
         background-color: #fe908b;
         color: #fff;
     }
@@ -115,6 +192,15 @@ input{
     }
     #formTerms{
         width: 2%;
+    }
+    .popup h4{
+        padding-top:15%;
+    }
+    .button:link, .button:visited{
+        background-color: #fe908b;
+        color: #fff;
+        padding: 3px 7px;
+        font-size: 15px;
     }
 }
 
@@ -138,13 +224,23 @@ input{
         padding-right: 0;
         font-size: 12px;
     }
-    .button{
+    .buttonR:link, .buttonR:visited{
         padding: 3px 7px;
         border: 1.5px solid #fd6f68;
     } 
     .input{
         height: 3vh;
-    }  
+    } 
+    .popup{
+        width: 70%;
+        font-size: 15px;
+    }
+    .popup h4{
+        font-size: 10px;
+    }
+    .popup .button{
+        font-size: 10px;
+    } 
 }
 @media only screen and (max-width:376px){
     .logo{
