--- a/LP-S/form.css
+++ b/LP-S/form.css
@@ -30,45 +30,45 @@ body {
     max-width: 100%;
     margin: 0 auto; 
 }
-.topnav{
+.topnav {
     overflow: hidden;
     background-color: #5b81a4;
   }
-
-  .topnav a {
+  
+  .topnav>a {
     float: right;
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 14px 16px;
+    padding: 2.3%;
     text-decoration: none;
     font-size: 17px;
   }
-
+  
   .active {
     color: white;
   }
-
+  
   .topnav .icon {
     display: none;
   }
-
+  
   .dropdown {
     float: right;
     overflow: hidden;
   }
-
+  
   .dropdown .dropbtn {
     font-size: 17px;
     border: none;
     outline: none;
     color: white;
-    padding: 14px 16px;
+    padding: 35% 0%;
     background-color: inherit;
     font-family: inherit;
     margin: 0;
   }
-
+  
   .dropdown-content {
     display: none;
     position: absolute;
@@ -77,7 +77,7 @@ body {
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-
+  
   .dropdown-content a {
     float: none;
     color: black;
@@ -86,23 +86,23 @@ body {
     display: block;
     text-align: left;
   }
-
+  
   .topnav a:hover, .dropdown:hover .dropbtn {
     background-color: #6a97c1ad;
     color: white;
   }
-
+  
   .dropdown-content a:hover {
     background-color: #6a97c1ad;
     color: black;
   }
-
+  
   .dropdown:hover .dropdown-content {
     display: block;
   }
 
+
   .notification {
-    background-color: ;
     color: white;
     text-decoration: none;
     padding: 15px 26px;
@@ -110,35 +110,39 @@ body {
     display: inline-block;
     border-radius: 2px;
   }
-
-  .notification:hover {
-    background: red;
-  }
-
+  
   .notification .badge {
     position:absolute;
-    top: 1.4em;
-    right: -0.7em;
+    top: 20px;
+    right: -10px;
     padding: 3px 8px;
     border-radius: 50%;
     background: pink;
     color: white;
-    font-size:12px;
   }
   .notification span:first-child:before{
     content:url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
   }
   #searchIn{
     float:right;
-    margin:12px;
-    border:0.5px solid;
+    margin:2%;
+    height: 4vh;
     box-shadow:0px 0px 0px;
-    padding:2px;
-    text-align:center;
+    text-align:left;
     color:black;
-    width:10%;
+    width: auto;
   }
 
+#form-wrap{
+    display: block;
+    font-size: 100%;
+    height: 88%;
+    width: 100%;
+    padding-left: 30%;
+    padding-right: 30%;
+    padding-top: 3%;
+    text-align: center;
+}
 input{
     height: 4vh;
     width: 50%;
@@ -237,12 +241,6 @@ h3{
     h3{
         font-size: 20px;
     }
-    .topnav a,.dropdown .dropbtn{
-        float: right;
-        display: block;
-        padding: 2px 2px;
-        margin: 0px 0px;
-      }
 }
 @media only screen and (max-width:415px){
     .header-wrap{
