--- a/Front/ads-module/ad/ad.css
+++ b/Front/ads-module/ad/ad.css
@@ -114,7 +114,7 @@ p {
   z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content-notification a {
   float: none;
   color: black;
   padding: 12px 16px;
@@ -262,6 +262,78 @@ p {
   margin-left: 5%;
 }
 
+/*-----notification-------*/
+.notification {
+  color: white;
+  text-decoration: none;
+  padding: 14px 16px;
+   position: relative;
+  display: inline-block;
+  outline: none;
+  border: none;
+  background-color: inherit;
+  margin: 0;
+}
+
+.notification .badge {
+  position: absolute;
+  top: 1.4em;
+  right: -0.7em;
+  padding: 3px 8px;
+  border-radius: 50%;
+  background: pink;
+  color: white;
+  font-size: 12px;
+}
+
+.notification span:first-child:before {
+  content: url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
+}
+
+
+.topnav a:hover,
+.dropdown:hover .notification {
+  background-color: #6a97c1ad;
+  color: white;
+}
+
+.dropdown-notification {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown-notification:hover .dropdown-content-notification {
+    display: block;
+}
+
+.dropdown-content-notification {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content-notification a {
+  /* float: none; */
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content-notification a:hover {
+  background-color: #6a97c1ad;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content-notification {
+  display: block;
+}
+/*-----notification-------*/
+
 /* Big tablet to 1200px (widths smaller then the 1140px row) */
 @media only screen and (max-width: 1200px) {
 
@@ -384,33 +456,7 @@ p {
   }
 }
 
-.notification {
-  color: white;
-  text-decoration: none;
-  padding: 15px 26px;
-  position: relative;
-  display: inline-block;
-  border-radius: 2px;
-}
 
-.notification:hover {
-  background: red;
-}
-
-.notification .badge {
-  position: absolute;
-  top: 1.4em;
-  right: -0.7em;
-  padding: 3px 8px;
-  border-radius: 50%;
-  background: pink;
-  color: white;
-  font-size: 12px;
-}
-
-.notification span:first-child:before {
-  content: url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
-}
 
 form input {
   float: right;
