--- a/Front/ads-module/edit/edit.css
+++ b/Front/ads-module/edit/edit.css
@@ -20,28 +20,6 @@ body {
   overflow-x: hidden;
 }
 
-.header-wrap {
-  background-color: #5b81a4;
-  height: 10.6vh;
-  position: sticky;
-  top: 0;
-  z-index: 0;
-}
-
-.content-wrap {
-  background-color: #5b81a4;
-  height: 12%;
-  max-width: 1140px;
-  margin: 0 auto;
-}
-
-.logo {
-  height: 3em;
-  width: auto;
-  float: left;
-  margin: -5px 0px 0px 3em;
-}
-
 p {
   margin-top: 0;
   margin-bottom: 20px;
@@ -52,19 +30,95 @@ p {
   font-weight: bold;
 }
 
-.map img {
-  height: 90%;
-  width: 90%;
+
+
+.content-wrap {
+  background-color: #5b81a4;
+  height: 12%;
+  max-width: 1140px;
+  margin: 0 auto;
+}
+/*-----header-----*/
+.logo {
+  height: 3em;
+  width: auto;
+  float: left;
+  margin: -5px 0px 0px 3em;
 }
 
-.slider-wrap {
+.topnav {
+  overflow: hidden;
+  background-color: #5b81a4;
+}
+
+.topnav a {
+  float: right;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.active {
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
   position: absolute;
-  width: 1140px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #6a97c1ad;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #6a97c1ad;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/*****header*****/
 .principle-details img {
   height: 20%;
   width: 20%;
@@ -254,50 +308,53 @@ input {
   color: #fe908b;
 }
 
-.topnav {
-  overflow: hidden;
-}
 
-.topnav {
-  overflow: hidden;
-  background-color: #5b81a4;
-}
 
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
+/*-----notification-------*/
+.notification {
+  color: white;
   text-decoration: none;
-  font-size: 17px;
-}
-
-.active {
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-.dropdown {
-  float: right;
-  overflow: hidden;
-}
-
-.dropdown .dropbtn {
-  font-size: 17px;
-  border: none;
-  outline: none;
-  color: white;
   padding: 14px 16px;
+   position: relative;
+  display: inline-block;
+  outline: none;
+  border: none;
   background-color: inherit;
-  font-family: inherit;
   margin: 0;
 }
 
-.dropdown-content {
+.notification .badge {
+  position: absolute;
+  top: 1.4em;
+  right: -0.7em;
+  padding: 3px 8px;
+  border-radius: 50%;
+  background: pink;
+  color: white;
+  font-size: 12px;
+}
+
+.notification span:first-child:before {
+  content: url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
+}
+
+
+.topnav a:hover,
+.dropdown:hover .notification {
+  background-color: #6a97c1ad;
+  color: white;
+}
+
+.dropdown-notification {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown-notification:hover .dropdown-content-notification {
+    display: block;
+}
+
+.dropdown-content-notification {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -306,7 +363,26 @@ input {
   z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content-notification a {
+  /* float: none; */
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content-notification a:hover {
+  background-color: #6a97c1ad;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content-notification {
+  display: block;
+}
+
+
+.dropdown-content-notification a {
   float: none;
   color: black;
   padding: 12px 16px;
@@ -315,23 +391,8 @@ input {
   text-align: left;
 }
 
-.topnav a:hover,
-.dropdown:hover .dropbtn {
-  background-color: #6a97c1ad;
-  color: white;
-}
-
-.dropdown-content a:hover {
-  background-color: #6a97c1ad;
-  color: black;
-}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
 /* Big tablet to 1200px (widths smaller then the 1140px row) */
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1500px) {
 
   /* the width of the browser is max 480*/
   .principle-details img {
@@ -340,8 +401,8 @@ input {
   }
 
   .first-details {
-    margin-left: 2%;
-    margin-top: 3%;
+    margin-left: 5%;
+    margin-top: 2%;
   }
 
   .description {
@@ -365,42 +426,7 @@ input {
 }
 
 /* Small tablet to big tabler: from 768px to 1023px */
-@media only screen and (max-width: 1023px) {
 
-  /* the width of the browser is max 480*/
-  body {
-    font-size: 15px;
-  }
-
-  .first-details {
-    margin-left: 5%;
-    margin-top: 2%;
-  }
-
-  .principle-details {
-    display: flex;
-  }
-
-  .principle-details img {
-    height: 25%;
-    width: 25%;
-  }
-
-  .map {
-    height: 80%;
-    width: 80%;
-  }
-
-  .btn.btn-ghost {
-    margin-left: 40%;
-  }
-
-  .description {
-    margin-left: 20%;
-  }
-
-
-}
 
 /* Small phones to small tablets: from 481px to 767px */
 @media only screen and (max-width: 767px) {
@@ -450,34 +476,6 @@ input {
   }
 }
 
-.notification {
-  color: white;
-  text-decoration: none;
-  padding: 15px 26px;
-  position: relative;
-  display: inline-block;
-  border-radius: 2px;
-}
-
-.notification:hover {
-  background: red;
-}
-
-.notification .badge {
-  position: absolute;
-  top: 1.4em;
-  right: -0.7em;
-  padding: 3px 8px;
-  border-radius: 50%;
-  background: pink;
-  color: white;
-  font-size: 12px;
-}
-
-.notification span:first-child:before {
-  content: url("https://img.icons8.com/material-sharp/15/000000/alarm.png")
-}
-
 form input {
   float: right;
   margin: 12px;
@@ -498,6 +496,9 @@ form input {
     width: 35%;
     margin-left: 13%;
     margin-top: 5%;
+  }
+  .principle-details{
+    display:flex;
   }
 
   .first-details {
@@ -577,15 +578,6 @@ form input {
 
   .button {
     font-size: 10px;
-  }
-
-}
-
-@media only screen and (max-width: 800px) {
-  .principle-details img {
-    height: 35%;
-    width: 35%;
-
   }
 
 }
