added logout, reformat header and edited add ad page

--- a/Front/statistics/statistics.css
+++ b/Front/statistics/statistics.css
@@ -88,14 +88,14 @@ button[type]:before {
   background-color: #5b81a4;
   margin:0 5em;
 }
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 6px;
-  text-decoration: none;
-  display: inline-block;
-  text-align: left;
-}
+  .dropdown .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 6px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
 }
 @media screen and (max-width: 1000px) and (min-device-width: 800px) {
   input[type]{
