--- a/Front/ads_module/edit/edit.css
+++ b/Front/ads_module/edit/edit.css
@@ -5,20 +5,7 @@
   box-sizing: border-box;
 }
 
-html,
-body {
-  background-image: (rgb(242, 180, 180, 1));
-  background-size: cover;
-  background-position: center;
-  height: 100vh;
-  background-attachment: fixed;
-  color: rgb(2, 2, 58, 1);
-  font-family: 'Raleway', sans-serif;
-  font-weight: 300;
-  font-size: 20px;
-  text-rendering: optimizeLegibility;
-  overflow-x: hidden;
-}
+
 
 p {
   margin-top: 0;
@@ -38,87 +25,87 @@ p {
   max-width: 1140px;
   margin: 0 auto;
 }
-/*-----header-----*/
-.logo {
-  height: 3em;
-  width: auto;
-  float: left;
-  margin: -5px 0px 0px 3em;
-}
+/*!*-----header-----*!*/
+/*.logo {*/
+/*  height: 3em;*/
+/*  width: auto;*/
+/*  float: left;*/
+/*  margin: -5px 0px 0px 3em;*/
+/*}*/
 
-.topnav {
-  overflow: hidden;
-  background-color: #5b81a4;
-}
+/*.topnav {*/
+/*  overflow: hidden;*/
+/*  background-color: #5b81a4;*/
+/*}*/
 
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+/*.topnav a {*/
+/*  float: right;*/
+/*  display: block;*/
+/*  color: #f2f2f2;*/
+/*  text-align: center;*/
+/*  padding: 14px 16px;*/
+/*  text-decoration: none;*/
+/*  font-size: 17px;*/
+/*}*/
 
-.active {
-  color: white;
-}
+/*.active {*/
+/*  color: white;*/
+/*}*/
 
-.topnav .icon {
-  display: none;
-}
+/*.topnav .icon {*/
+/*  display: none;*/
+/*}*/
 
-.dropdown {
-  float: right;
-  overflow: hidden;
-}
+/*.dropdown {*/
+/*  float: right;*/
+/*  overflow: hidden;*/
+/*}*/
 
-.dropdown .dropbtn {
-  font-size: 17px;
-  border: none;
-  outline: none;
-  color: white;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0;
-}
+/*.dropdown .dropbtn {*/
+/*  font-size: 17px;*/
+/*  border: none;*/
+/*  outline: none;*/
+/*  color: white;*/
+/*  padding: 14px 16px;*/
+/*  background-color: inherit;*/
+/*  font-family: inherit;*/
+/*  margin: 0;*/
+/*}*/
 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  z-index: 1;
-}
+/*.dropdown-content {*/
+/*  display: none;*/
+/*  position: absolute;*/
+/*  background-color: #f9f9f9;*/
+/*  min-width: 160px;*/
+/*  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);*/
+/*  z-index: 1;*/
+/*}*/
 
-.dropdown-content a {
-  float: none;
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  text-align: left;
-}
+/*.dropdown-content a {*/
+/*  float: none;*/
+/*  color: black;*/
+/*  padding: 12px 16px;*/
+/*  text-decoration: none;*/
+/*  display: block;*/
+/*  text-align: left;*/
+/*}*/
 
-.topnav a:hover,
-.dropdown:hover .dropbtn {
-  background-color: #6a97c1ad;
-  color: white;
-}
+/*.topnav a:hover,*/
+/*.dropdown:hover .dropbtn {*/
+/*  background-color: #6a97c1ad;*/
+/*  color: white;*/
+/*}*/
 
-.dropdown-content a:hover {
-  background-color: #6a97c1ad;
-  color: black;
-}
+/*.dropdown-content a:hover {*/
+/*  background-color: #6a97c1ad;*/
+/*  color: black;*/
+/*}*/
 
-.dropdown:hover .dropdown-content {
-  display: block;
-}
+/*.dropdown:hover .dropdown-content {*/
+/*  display: block;*/
+/*}*/
 
-/*****header*****/
+/*!*****header*****!*/
 .principle-details img {
   height: 20%;
   width: 20%;
@@ -310,7 +297,7 @@ input {
 
 
 
-/*-----notification-------*/
+/*!*-----notification-------*!*/
 .notification {
   color: white;
   text-decoration: none;
@@ -581,3 +568,248 @@ form input {
   }
 
 }
+
+@media screen and (min-width: 1000px) {
+  input[type]{
+    max-width: 240px; }
+
+  .topnav {
+    overflow: hidden;
+    background-color: #5b81a4;
+    margin:0 5em;
+  }
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 6px;
+    text-decoration: none;
+    display: inline-block;
+    text-align: left;
+  }
+}
+@media screen and (max-width: 1000px) and (min-device-width: 800px) {
+  input[type]{
+    max-width: 140px; }
+  .topnav {
+    overflow: hidden;
+    background-color: #5b81a4;
+    margin:0 2em;
+  }
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: inline-block;
+    text-align: left;
+  }
+}
+@media screen and (max-width: 800px) and (min-device-width: 420px) {
+  input[type]{
+    display: none }
+  .topnav {
+    overflow: hidden;
+    background-color: #5b81a4;
+    margin:0 1em;
+  }
+  .topnav a{
+    float: right;
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 12px 12px;
+    text-decoration: none;
+    font-size: 14px;
+    margin:0;
+  }
+  .dropdown .dropbtn {
+    font-size: 14px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 12px 12px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  .content-wrap a {
+    float: left;
+    padding:0;
+    /*margin: -5px 0px 0px 3em;*/
+
+  }
+  .logo{
+    height: 3em;
+    /*margin:0 5em;*/
+  }
+  .header-wrap {
+    background-color: #5b81a4;
+    position: sticky;
+    z-index: 0;
+  }
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 12px;
+    text-decoration: none;
+    display: inline-block;
+    text-align: left;
+  }
+}
+@media screen and (max-width: 420px) {
+  input[type]{
+    display: none }
+  .topnav {
+    overflow: hidden;
+    background-color: #5b81a4;
+    margin:0 0.5em;
+  }
+  .topnav a{
+    float: right;
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 10px 6px;
+    text-decoration: none;
+    font-size: 12px;
+    margin:0;
+  }
+  .dropdown .dropbtn {
+    font-size: 12px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 10px 6px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  .content-wrap a {
+    float: left;
+    padding:0;
+  }
+  .logo{
+    height: 2.5em;
+  }
+  .header-wrap {
+    background-color: #5b81a4;
+    position: sticky;
+    z-index: 0;
+  }
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 6px;
+    text-decoration: none;
+    display: inline-block;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  #statistics .stat {
+    max-width: 30%;
+    display: block;
+  }
+  .topnav a {
+    float: right;
+    display: inline-block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 15px 15px;
+    text-decoration: none;
+    font-size: 17px;
+    margin:0;
+  }
+  .content-wrap a {
+    float: left;
+    padding:0;
+  }
+  .logo{
+    height: 3em;
+
+  }
+  .header-wrap {
+    background-color: #5b81a4;
+    position: sticky;
+    z-index: 0;
+  }
+  .dropdown .dropbtn {
+    font-size: 17px;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 14px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+}
+
+
+
+
+html,
+body {
+  background-image: white;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  background-attachment: fixed;
+  background-color: white;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 300;
+  font-size: 20px;
+  text-rendering: optimizeLegibility;
+  overflow-x: hidden;
+  margin:0;
+}
+.dropdown {
+  float: right;
+  overflow: hidden;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 0;
+}
+
+
+.topnav a:hover,
+.dropdown:hover .dropbtn {
+  background-color: #6a97c1ad;
+  color: white;
+}
+
+.dropdown-content a:hover {
+  background-color: #6a97c1ad;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+form input {
+  float: right;
+  box-shadow: 0px 0px 0px;
+  padding: 0.5em;
+  border-radius: 5px 5px;
+  color: black;
+  font-size: 17px;
+  border: none;
+  outline: none;
+  margin: 6px 7px;
+  font-family: inherit;
+
+}
+
+.content-wrap {
+  background-color: #5b81a4;
+  height: 100%;
+}
+
