--- a/Front/login/login.css
+++ b/Front/login/login.css
@@ -1,5 +1,37 @@
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
 
-#log-in-wrap {
+html,
+body {
+  background-color: rgb(238, 230, 230, 0.1);
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  background-attachment: fixed;
+  color: #344a5f;
+  font-family: 'Raleway', sans-serif; 
+  font-weight: 300;
+  font-size: 20px;
+  text-rendering: optimizeLegibility; 
+  overflow-x: hidden;
+}
+
+.topnav{
+  background-color:#5b81a4;
+  height: 12%;
+}
+.content-wrap {
+  background-color:#5b81a4;
+  height: 12%;
+  max-width: 100%;
+  margin: 0 auto; 
+}
+
+#log-in-wrap{
   display: block;
   font-size: 100%;
   height: 88%;
@@ -9,33 +41,25 @@
   padding-top: 15%;
   text-align: center;
 }
-
-input {
+input{
   height: 4vh;
   width: 50%;
   border-radius: 4px;
 }
-.button {
-  display: inline-block;
-  padding: 10px 30px;
-  font-weight: 300;
-  text-decoration: none;
-  border-radius: 4%;
-  transition: background-color 0.2s, border 0.2s, color 0.7s;
-  border: 2px solid #fd6f68;
-  background-color: transparent;
-  color: #fd6f68;
-  margin-top: 4vh;
-  margin-left: 2vh;
+.logo {
+  height: 99px; 
+  width: auto;
+  float: left;
+  padding-left: 10%;
 }
 
-.btn.btn-ghost {
+.btn.btn-ghost{
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
   text-decoration: none;
   border-radius: 4%;
-  transition: background-color 0.2s, border 0.2s, color 0.7s;
+  transition: background-color 0.2s, border 0.2s, color 0.7s; 
   border: 2px solid #fd6f68;
   background-color: transparent;
   color: #fd6f68;
@@ -43,60 +67,8 @@ input {
   margin-top: 4vh;
 }
 
-.overlay {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.7);
-  transition: opacity 500ms;
-  visibility: hidden;
-  opacity: 0;
-}
-
-.overlay:target {
-  visibility: visible;
-  opacity: 1;
-}
-
-.popup {
-  margin: 70px auto;
-  padding: 20px;
-  background: #fff;
-  border-radius: 5px;
-  width: 30%;
-  position: relative;
-  transition: all 5s ease-in-out;
-}
-
-.popup h4 {
-  margin-top: 0;
-  color: #344a5f;
-  font-family: 'Raleway', sans-serif;
-  font-size: 15px;
-}
-
-.popup .contentPU {
-  max-height: 30%;
-  overflow: auto;
-}
-
-.button:link,
-.button:visited {
-  border: 2px solid #fd6f68;
-  color: #fd6f68;
-}
-
-.button:hover,
-.button:active {
-  background-color: #fe908b;
-  border: 2px solid #fd6f68;
-  color: #fff;
-}
-
-.btn.btn-ghost:link,
-.btn.btn-ghost:visited {
+.btn.btn-ghost:link, 
+.btn.btn-ghost:visited{
   border: 2px solid #fd6f68;
   color: #fd6f68;
 }
@@ -108,426 +80,84 @@ input {
   color: #fff;
 }
 
-#close {
-  position: absolute;
-  top: 8px;
-  right: 30px;
-  transition: all 200ms;
-  font-size: 30px;
-  font-weight: bold;
-  text-decoration: none;
-  color: #344a5f;
-}
-
-#close:hover {
-  color: #fe908b;
-}
-
-@media only screen and (max-width:1024px) {
-  #log-in-wrap {
-    padding-left: 0;
-    padding-right: 0;
-    font-size: 30px;
+@media only screen and (max-width:1024px){
+  .topnav{
+      height: 9%;
   }
-
-  .btn:link,
-  .btn:visited {
-    background-color: #fe908b;
-    color: #fff;
+  .logo{
+      height: 125px;
   }
-
-  .popup h4 {
-    padding-top: 15%;
+  #log-in-wrap{
+      padding-left: 0;
+      padding-right: 0;
+      font-size: 30px;
   }
-
-  .button:link,
-  .button:visited {
-    background-color: #fe908b;
-    color: #fff;
-    padding: 3px 7px;
-    font-size: 15px;
+  .btn:link, .btn:visited{
+      background-color: #fe908b;
+      color: #fff;
   }
 }
 
-@media only screen and (max-width:415px) {
-    #log-in-wrap {
-    padding-left: 0;
-    padding-right: 0;
-    font-size: 15px;
+@media only screen and (max-width:768px){
+  .topnav{
+      height: 9%;
   }
-
-  .btn.btn-ghost {
-    padding: 3px 7px;
-    border: 1.5px solid #fd6f68;
-  }
-
-  .popup {
-    width: 70%;
-    font-size: 15px;
-  }
-
-  .popup h4 {
-    font-size: 10px;
-  }
-
-  .popup .button {
-    font-size: 10px;
+  .logo{
+      height: 92px;
   }
 }
-
-@media only screen and (max-width:376px) {
-   #log-in-wrap {
-    padding-left: 0;
-    padding-right: 0;
-    font-size: 15px;
+@media only screen and (max-width:415px){
+  .topnav{
+      height: 50px;
   }
-
-  .btn.btn-ghost {
-    padding: 3px 6px;
+  .logo{
+      height: 51px;
   }
-
-  .popup h4 {
-    font-size: 10px;
+  #log-in-wrap{
+      padding-left: 0;
+      padding-right: 0;
+      font-size: 15px;
   }
-
-  .button {
-    font-size: 10px;
+  .btn.btn-ghost{
+      padding: 3px 7px;
+      border: 1.5px solid #fd6f68;
   }
 }
-
-@media only screen and (max-width:360px) {
-
-
-  .popup h4 {
-    font-size: 10px;
+@media only screen and (max-width:376px){
+  .logo{
+      height: 50px;
   }
-
-  .button {
-    font-size: 10px;
+  .topnav{
+      height: 50px;
   }
-}
-
-@media only screen and (max-width:320px) {
-
-  #log-in-wrap {
-    padding-left: 0;
-    padding-right: 0;
-    font-size: 10px;
+  #log-in-wrap{
+      padding-left: 0;
+      padding-right: 0;
+      font-size: 15px;
   }
-
-  .btn.btn-ghost {
-    border: 1.5px solid #fd6f68;
-  }
-
-  h4 {
-    font-size: 10px;
-  }
-
-  .button {
-    font-size: 10px;
+  .btn.btn-ghost{
+      padding: 3px 6px;
   }
 }
-
-* {
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
+@media only screen and (max-width:360px){
+  .topnav{
+      height: 7%;
+  }
+  .logo{
+      height: 45px;
+  }
 }
-
-html,
-body {
-    background-color: rgb(238, 230, 230, 0.1);
-    background-size: cover;
-    background-position: center;
-    height: 100vh;
-    background-attachment: fixed;
-    color: #344a5f;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 300;
-    font-size: 15px;
-    text-rendering: optimizeLegibility;
-    overflow-x: hidden;
-
-}
-
-
-/*.header-wrap {*/
-/*  background-color: #5b81a4;*/
-/*  height: 12%;*/
-/*}*/
-
-/*.content-wrap {*/
-/*  background-color: #5b81a4;*/
-/*  height: 12%;*/
-/*  max-width: 100%;*/
-/*  margin: 0 auto;*/
-/*}*/
-
-
-form{
-    margin:2em;
-}
-
-
-.btn-ghost {
-    display: inline-block;
-    padding: 10px 30px;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 4%;
-    transition: background-color 0.2s, border 0.2s, color 0.7s;
-    border: 2px solid #fd6f68;
-    background-color: transparent;
-    color: #fd6f68;
-    margin-left: 18vh;
-    margin-top: 4vh;
-}
-
-.button {
-    display: inline-block;
-    padding: 10px 30px;
-    font-weight: 300;
-    text-decoration: none;
-    border-radius: 4%;
-    transition: background-color 0.2s, border 0.2s, color 0.7s;
-    border: 2px solid #fd6f68;
-    background-color: transparent;
-    color: #fd6f68;
-    margin-top: 4vh;
-    margin-left: 2vh;
-}
-
-.button:link,
-.button:visited {
-    border: 2px solid #fd6f68;
-    color: #fd6f68;
-}
-
-.button:hover,
-.button:active {
-    background-color: #fe908b;
-    border: 2px solid #fd6f68;
-    color: #fff;
-}
-
-.btn-ghost:link,
-.btn-ghost:visited {
-    border: 2px solid #fd6f68;
-    color: #fd6f68;
-}
-
-.btn-ghost:hover,
-.btn-ghost:active {
-    background-color: #fe908b;
-    border: 2px solid #fd6f68;
-    color: #fff;
-}
-
-/*.overlay {*/
-/*    position: fixed;*/
-/*    top: 0;*/
-/*    bottom: 0;*/
-/*    left: 0;*/
-/*    right: 0;*/
-/*    background: rgba(0, 0, 0, 0.7);*/
-/*    transition: opacity 500ms;*/
-/*    visibility: hidden;*/
-/*    opacity: 0;*/
-/*}*/
-
-/*.overlay:target {*/
-/*    visibility: visible;*/
-/*    opacity: 1;*/
-/*}*/
-
-/*.popup {*/
-/*    margin: 70px auto;*/
-/*    padding: 20px;*/
-/*    background: #fff;*/
-/*    border-radius: 5px;*/
-/*    width: 30%;*/
-/*    position: relative;*/
-/*    transition: all 0.10s ease-in-out;*/
-/*}*/
-
-/*.popup h4 {*/
-/*    margin-top: 0;*/
-/*    color: #344a5f;*/
-/*    font-family: 'Raleway', sans-serif;*/
-/*    font-size: 15px;*/
-/*}*/
-
-/*.popup .contentPU {*/
-/*    max-height: 30%;*/
-/*    overflow: auto;*/
-/*}*/
-
-/*#close {*/
-/*    position: absolute;*/
-/*    top: 8px;*/
-/*    right: 30px;*/
-/*    transition: all 200ms;*/
-/*    font-size: 30px;*/
-/*    font-weight: bold;*/
-/*    text-decoration: none;*/
-/*    color: #344a5f;*/
-/*}*/
-
-/*#close:hover {*/
-/*    color: #fe908b;*/
-/*}*/
-
-@media only screen and (max-width:1024px) {
-    .btn-ghost:link,
-    .btn-ghost:visited {
-        background-color: #fe908b;
-        color: #fff;
-    }
-
-    input {
-        height: 3vh;
-    }
-    .popup h4 {
-        padding-top: 15%;
-    }
-
-    .button:link,
-    .button:visited {
-        background-color: #fe908b;
-        color: #fff;
-        padding: 3px 7px;
-        font-size: 15px;
-    }
-}
-
-
-@media only screen and (max-width:415px) {
-
-
-    .btn-ghost:link,
-    .btn-ghost:visited {
-        padding: 3px 7px;
-        border: 1.5px solid #fd6f68;
-    }
-
-    .input {
-        height: 3vh;
-    }
-
-    .popup {
-        width: 70%;
-        font-size: 15px;
-    }
-
-    .popup h4 {
-        font-size: 10px;
-    }
-
-    .popup .button {
-        font-size: 10px;
-    }
-}
-
-@media only screen and (max-width:376px) {
-    .logo {
-        height: 50px;
-    }
-
-    .header-wrap {
-        height: 50px;
-    }
-
-    #register-wrap {
-        padding-left: 0;
-        padding-right: 0;
-        font-size: 10px;
-    }
-
-    .button {
-        padding: 3px 6px;
-    }
-
-    .input {
-        height: 3vh;
-    }
-
-    #registerGender {
-        height: 3vh;
-    }
-}
-
-@media only screen and (max-width:360px) {
-    .header-wrap {
-        height: 7%;
-    }
-
-    .logo {
-        height: 45px;
-    }
-}
-
-@media only screen and (max-width:320px) {
-    .logo {
-        height: 40px;
-    }
-
-    #register-wrap {
-        padding-left: 0;
-        padding-right: 0;
-        font-size: 10px;
-    }
-
-    .button {
-        border: 1.5px solid #fd6f68;
-    }
-}
-
-.logo {
-    height: 4em;
-    width: auto;
-    float: left;
-    margin: -5px 0px 0px 3em;
-}
-
-.topnav {
-    overflow: hidden;
-    background-color: #5b81a4;
-    width: 100%;
-}
-
-.topnav a {
-    float: right;
-    display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
-
-
-
-.content-wrap {
-    background-color: #5b81a4;
-    height: 12%;
-    max-width: 1140px;
-    margin: 0 auto;
-}
-
-@media screen and (min-width: 300px) and (max-width: 700px) {
-
-
-    .topnav a {
-        float: right;
-        display: block;
-        padding: 2px 2px;
-        margin: 0px 0px;
-    }
-
-    img.logo {
-        height: 1.2em;
-        width: auto;
-        margin: 0px 0px 0px 0.5em;
-    }
+@media only screen and (max-width:320px){
+  
+  .logo{
+      height: 40px;
+  }
+  #log-in-wrap{
+      padding-left: 0;
+      padding-right: 0;
+      font-size: 10px;
+  }
+  .btn.btn-ghost{
+      border: 1.5px solid #fd6f68;
+  }
 }
