--- a/Front/statistics/statistics.css
+++ b/Front/statistics/statistics.css
@@ -122,7 +122,7 @@ button[type]:before {
   background-color: #5b81a4;
   margin:0 1em;
 }
- .topnav a{
+ .topnav > a{
   float: right;
   display: inline-block;
   color: #f2f2f2;
@@ -174,7 +174,7 @@ button[type]:before {
   background-color: #5b81a4;
   margin:0 0.5em;
 }
- .topnav a{
+ .topnav > a{
   float: right;
   display: inline-block;
   color: #f2f2f2;
@@ -221,7 +221,7 @@ button[type]:before {
     max-width: 30%;
     display: block;
   }
-  .topnav a {
+  .topnav > a {
   float: right;
   display: inline-block;
   color: #f2f2f2;
@@ -292,7 +292,7 @@ body {
 }
 
 
-.topnav a:hover,
+.topnav > a:hover,
 .dropdown:hover .dropbtn {
   background-color: #6a97c1ad;
   color: white;
