--- a/Front/personal_ads/personal-ads.css
+++ b/Front/personal_ads/personal-ads.css
@@ -206,7 +206,7 @@ h2#title {
         background-color: #5b81a4;
         margin:0 1em;
     }
-    .topnav a{
+    .topnav > a{
         float: right;
         display: inline-block;
         color: #f2f2f2;
@@ -258,7 +258,7 @@ h2#title {
         background-color: #5b81a4;
         margin:0 0.5em;
     }
-    .topnav a{
+    .topnav > a{
         float: right;
         display: inline-block;
         color: #f2f2f2;
@@ -305,7 +305,7 @@ h2#title {
         max-width: 30%;
         display: block;
     }
-    .topnav a {
+    .topnav > a {
         float: right;
         display: inline-block;
         color: #f2f2f2;
@@ -376,7 +376,7 @@ body {
 }
 
 
-.topnav a:hover,
+.topnav > a:hover,
 .dropdown:hover .dropbtn {
     background-color: #6a97c1ad;
     color: white;
